--- a/test-output/old/Automation Test Suite/classes.html
+++ b/test-output/old/Automation Test Suite/classes.html
@@ -4,46 +4,92 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcases.BrokerDiscountsTabTest</td>
+<td>testcases.BrokerBulkUploadPaymentsmatchedCarrierTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAmountSearchTest</td>
+<td>loginBroker</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoadIDSortTest</td>
+<td>verifynewPayment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCompanyNameSearchTest</td>
+<td>verifyClickGridDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginAsBroker</td>
+<td>verifyUploadFile</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoadIDSearchTest</td>
+<td>verifyClickschpayment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyDateSearchTest</td>
+<td>verifyBulkUploadPaymentsUnmatched</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyDiscountsTabTest</td>
+<td>verifyClickimport</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>quit</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>loginBroker</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyCarrierSortTest</td>
+<td>verifynewPayment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyInvoiceSearchTest</td>
+<td>verifyClickGridDown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyUploadFile</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyClickschpayment</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyBulkUploadPaymentsUnmatched</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyClickimport</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
