--- a/test-output/old/Automation Test Suite/methods-alphabetical.html
+++ b/test-output/old/Automation Test Suite/methods-alphabetical.html
@@ -1,26 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.loginAsBroker(java.lang.String, java.lang.String)[pri:12, instance:testcases.BrokerDiscountsTabTest@396e2f39]">loginAsBroker</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="9273a8">  <td>18/06/12 17:20:59</td>   <td>38281</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerDiscountsTabTest@396e2f39]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:03</td>   <td>-17597</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerDiscountsTabTest.setUp()[pri:0, instance:testcases.BrokerDiscountsTabTest@396e2f39]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:55</td>   <td>34526</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyAmountSearchTest()[pri:20, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyAmountSearchTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:29</td>   <td>8447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyCarrierSortTest()[pri:14, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyCarrierSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:43</td>   <td>23035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyCompanyNameSearchTest()[pri:17, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyCompanyNameSearchTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:51</td>   <td>30704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyDateSearchTest()[pri:19, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyDateSearchTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:23</td>   <td>2910</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyDiscountsTabTest()[pri:13, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyDiscountsTabTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:39</td>   <td>18984</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyInvoiceSearchTest()[pri:16, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyInvoiceSearchTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:47</td>   <td>26907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyLoadIDSearchTest()[pri:18, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyLoadIDSearchTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/12 17:20:34</td>   <td>13995</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerDiscountsTabTest.verifyLoadIDSortTest()[pri:15, instance:testcases.BrokerDiscountsTabTest@396e2f39]">verifyLoadIDSortTest</td> 
-  <td>main@942518407</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.loginBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">loginBroker</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:36</td>   <td>31847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.loginBroker(java.lang.String, java.lang.String)[pri:8, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">loginBroker</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="a7b76d">  <td>18/06/14 15:32:23</td>   <td>18998</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="a7b76d">  <td>18/06/14 15:32:55</td>   <td>50842</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:31:53</td>   <td>-11466</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBulkUploadPaymentsmatchedCarrierTest.setUp()[pri:0, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:24</td>   <td>19738</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBulkUploadPaymentsUnmatchedCarrierTest.setUp()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:09</td>   <td>4845</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyBulkUploadPaymentsUnmatched()[pri:2, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyBulkUploadPaymentsUnmatched</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:41</td>   <td>36831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyBulkUploadPaymentsUnmatched()[pri:9, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyBulkUploadPaymentsUnmatched</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:20</td>   <td>15865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyClickGridDown()[pri:7, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyClickGridDown</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:52</td>   <td>47704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickGridDown()[pri:14, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyClickGridDown</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:15</td>   <td>10633</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyClickimport()[pri:5, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyClickimport</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:47</td>   <td>42487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickimport()[pri:12, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyClickimport</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:17</td>   <td>12702</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyClickschpayment()[pri:6, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyClickschpayment</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:49</td>   <td>44552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickschpayment()[pri:13, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyClickschpayment</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:11</td>   <td>6202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyUploadFile()[pri:4, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyUploadFile</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:42</td>   <td>37951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyUploadFile()[pri:11, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyUploadFile</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/14 15:32:09</td>   <td>4853</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifynewPayment()[pri:3, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifynewPayment</td> 
+  <td>main@134310351</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/14 15:32:41</td>   <td>36837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifynewPayment()[pri:10, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifynewPayment</td> 
+  <td>main@134310351</td>   <td></td> </tr>
 </table>
