--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,38 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:06:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.loginAsBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerProcessedTabTest@17d0685f]">loginAsBroker</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.loginAsCarrier(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:testcases.CarrierPaidTabTest@17d0685f]">loginAsCarrier</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="96b1f3">  <td>18/06/11 17:08:37</td>   <td>108050</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerProcessedTabTest@17d0685f]">&lt;&lt;quit</td> 
+<tr bgcolor="96b1f3">  <td>18/06/15 00:03:16</td>   <td>37334</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierPaidTabTest@17d0685f]">&lt;&lt;quit</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:06:36</td>   <td>-12402</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerProcessedTabTest.setUp()[pri:0, instance:testcases.BrokerProcessedTabTest@17d0685f]">&gt;&gt;setUp</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:28</td>   <td>-10500</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierPaidTabTest.setUp()[pri:0, instance:testcases.CarrierPaidTabTest@17d0685f]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:07:53</td>   <td>64144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountPaidToCarrierSortTest()[pri:8, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyAmountPaidToCarrierSortTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:50</td>   <td>11891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyAmountSortTest()[pri:4, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyAmountSortTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:07:45</td>   <td>56173</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountPulledSortTest()[pri:7, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyAmountPulledSortTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:01</td>   <td>22921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyLoadIdSortTest()[pri:6, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyLoadIdSortTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:25</td>   <td>96473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyAmountSearchTest()[pri:12, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyAmountSearchTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:42</td>   <td>3470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyPaidTabTest()[pri:2, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyPaidTabTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:01</td>   <td>72394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyCarrierSortTest()[pri:9, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyCarrierSortTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:56</td>   <td>17388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyPayerSortTest()[pri:5, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyPayerSortTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:16</td>   <td>87146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyCompanySearchTest()[pri:11, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyCompanySearchTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:07</td>   <td>28565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifySearchAmountTest()[pri:8, instance:testcases.CarrierPaidTabTest@17d0685f]">verifySearchAmountTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:29</td>   <td>100320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyDateSearchTest()[pri:12, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyDateSearchTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:13</td>   <td>34496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifySearchLoadIdTest()[pri:10, instance:testcases.CarrierPaidTabTest@17d0685f]">verifySearchLoadIdTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:07:16</td>   <td>27345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyDiscountSortTest()[pri:4, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyDiscountSortTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:10</td>   <td>31582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifySearchPayerTest()[pri:9, instance:testcases.CarrierPaidTabTest@17d0685f]">verifySearchPayerTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:21</td>   <td>92515</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyInvoiceSearchTest()[pri:11, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyInvoiceSearchTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:33</td>   <td>104208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyLoadIDSearchTest()[pri:12, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyLoadIDSearchTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:08:09</td>   <td>80400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyLoadIDSortTest()[pri:10, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyLoadIDSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:07:36</td>   <td>47164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPaidToCarrierSortTest()[pri:6, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyPaidToCarrierSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:07:06</td>   <td>17368</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPaySelectionSortTest()[pri:3, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyPaySelectionSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:06:59</td>   <td>10413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyProcessedTabTest()[pri:2, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyProcessedTabTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/11 17:07:27</td>   <td>37764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerProcessedTabTest.verifyPulledFromBankDateSortTest()[pri:5, instance:testcases.BrokerProcessedTabTest@17d0685f]">verifyPulledFromBankDateSortTest</td> 
+<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:45</td>   <td>6206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyStatusSortTest()[pri:3, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyStatusSortTest</td> 
   <td>main@183284570</td>   <td></td> </tr>
 </table>
