--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,50 +4,54 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testcases.CarrierPaidTabTest</td>
+<td>testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPaidTabTest</td>
+<td>verifyBulkUploadPaymentsmatched</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginAsCarrier</td>
+<td>verifyAmountSearchTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchAmountTest</td>
+<td>verifynewPayment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyLoadIdSortTest</td>
+<td>loginBroker</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAmountSortTest</td>
+<td>verifyClickGridDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyPayerSortTest</td>
+<td>verifyLoadIDNumSearchTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchStatusTest</td>
+<td>verifyUploadFile</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchPayerTest</td>
+<td>verifyClickschpayment</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyStatusSortTest</td>
+<td>verifyClickimport</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchLoadIdTest</td>
+<td>verifyclickLoadIDSortTest</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyclickAmountSortTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
