--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,26 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.loginAsCarrier(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:testcases.CarrierPaidTabTest@17d0685f]">loginAsCarrier</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="96b1f3">  <td>18/06/15 00:03:16</td>   <td>37334</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierPaidTabTest@17d0685f]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:28</td>   <td>-10500</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierPaidTabTest.setUp()[pri:0, instance:testcases.CarrierPaidTabTest@17d0685f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:50</td>   <td>11891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyAmountSortTest()[pri:4, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyAmountSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:01</td>   <td>22921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyLoadIdSortTest()[pri:6, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyLoadIdSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:42</td>   <td>3470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyPaidTabTest()[pri:2, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyPaidTabTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:56</td>   <td>17388</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyPayerSortTest()[pri:5, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyPayerSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:07</td>   <td>28565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifySearchAmountTest()[pri:8, instance:testcases.CarrierPaidTabTest@17d0685f]">verifySearchAmountTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:13</td>   <td>34496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifySearchLoadIdTest()[pri:10, instance:testcases.CarrierPaidTabTest@17d0685f]">verifySearchLoadIdTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:03:10</td>   <td>31582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifySearchPayerTest()[pri:9, instance:testcases.CarrierPaidTabTest@17d0685f]">verifySearchPayerTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
-<tr bgcolor="9a9d7d">  <td>18/06/15 00:02:45</td>   <td>6206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierPaidTabTest.verifyStatusSortTest()[pri:3, instance:testcases.CarrierPaidTabTest@17d0685f]">verifyStatusSortTest</td> 
-  <td>main@183284570</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.loginBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">loginBroker</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="96b1f3">  <td>18/06/17 21:17:52</td>   <td>35892</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:08</td>   <td>-8806</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBulkUploadPaymentsUnmatchedCarrierTest.setUp()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:45</td>   <td>28934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyAmountSearchTest()[pri:17, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyAmountSearchTest</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:22</td>   <td>6112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyBulkUploadPaymentsmatched()[pri:2, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyBulkUploadPaymentsmatched</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:33</td>   <td>16727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickGridDown()[pri:7, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyClickGridDown</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:28</td>   <td>11453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickimport()[pri:5, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyClickimport</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:30</td>   <td>13514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickschpayment()[pri:6, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyClickschpayment</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:49</td>   <td>32467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyLoadIDNumSearchTest()[pri:20, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyLoadIDNumSearchTest</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:24</td>   <td>7225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyUploadFile()[pri:4, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyUploadFile</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:36</td>   <td>19880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyclickAmountSortTest()[pri:12, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyclickAmountSortTest</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:41</td>   <td>24470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyclickLoadIDSortTest()[pri:15, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifyclickLoadIDSortTest</td> 
+  <td>main@797925218</td>   <td></td> </tr>
+<tr bgcolor="9a9d7d">  <td>18/06/17 21:17:22</td>   <td>6118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifynewPayment()[pri:3, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@17d0685f]">verifynewPayment</td> 
+  <td>main@797925218</td>   <td></td> </tr>
 </table>
