--- a/test-output/old/Automation Test Suite/methods.html
+++ b/test-output/old/Automation Test Suite/methods.html
@@ -1,40 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Automation Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBulkUploadPaymentsmatchedCarrierTest.setUp()[pri:0, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:25</td>   <td>9471</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.loginBroker(java.lang.String, java.lang.String)[pri:1, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">loginBroker</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:28</td>   <td>12872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyBulkUploadPaymentsmatched()[pri:2, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyBulkUploadPaymentsmatched</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:28</td>   <td>12877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifynewPayment()[pri:3, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifynewPayment</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:30</td>   <td>14223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyUploadFile()[pri:4, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyUploadFile</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:34</td>   <td>18583</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyClickimport()[pri:5, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyClickimport</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:36</td>   <td>20624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyClickschpayment()[pri:6, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyClickschpayment</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="70d1b1">  <td>18/06/14 23:18:39</td>   <td>23807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsmatchedCarrierTest.verifyClickGridDown()[pri:7, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">verifyClickGridDown</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="a7b76d">  <td>18/06/14 23:18:42</td>   <td>26942</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBulkUploadPaymentsmatchedCarrierTest@a74868d]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:18:43</td>   <td>27717</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokerBulkUploadPaymentsUnmatchedCarrierTest.setUp()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:18:50</td>   <td>35053</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.loginBroker(java.lang.String, java.lang.String)[pri:8, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">loginBroker</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:18:54</td>   <td>38552</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyBulkUploadPaymentsUnmatched()[pri:9, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyBulkUploadPaymentsUnmatched</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:18:54</td>   <td>38555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifynewPayment()[pri:10, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifynewPayment</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:18:55</td>   <td>39856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyUploadFile()[pri:11, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyUploadFile</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:19:00</td>   <td>44164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickimport()[pri:12, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyClickimport</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:19:02</td>   <td>46210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickschpayment()[pri:13, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyClickschpayment</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="748aa2">  <td>18/06/14 23:19:05</td>   <td>49374</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokerBulkUploadPaymentsUnmatchedCarrierTest.verifyClickGridDown()[pri:14, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">verifyClickGridDown</td> 
-  <td>main@1943325854</td>   <td></td> </tr>
-<tr bgcolor="a7b76d">  <td>18/06/14 23:19:08</td>   <td>52511</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.BrokerBulkUploadPaymentsUnmatchedCarrierTest@18bf3d14]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1943325854</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/18 14:26:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierlockedaccountcanbeunlockedbyadminTest.setUp()[pri:0, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/18 14:26:16</td>   <td>11825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.loginTest(java.lang.String, java.lang.String, java.lang.String)[pri:13, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">loginTest</td> 
+  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/18 14:27:00</td>   <td>56122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.Home()[pri:14, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">Home</td> 
+  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="70d1b1">  <td>18/06/18 14:27:05</td>   <td>60645</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierlockedaccountcanbeunlockedbyadminTest.adminLogin(java.lang.String, java.lang.String)[pri:15, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">adminLogin</td> 
+  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="a7b76d">  <td>18/06/18 14:27:17</td>   <td>73110</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierlockedaccountcanbeunlockedbyadminTest@396e2f39]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/18 14:27:18</td>   <td>73898</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CarrierLoginTest.setUp()[pri:0, instance:testcases.CarrierLoginTest@a74868d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="748aa2">  <td>18/06/18 14:27:29</td>   <td>84502</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CarrierLoginTest.loginTest(java.lang.String, java.lang.String)[pri:16, instance:testcases.CarrierLoginTest@a74868d]">loginTest</td> 
+  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="a7b76d">  <td>18/06/18 14:27:37</td>   <td>92607</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.quit()[pri:0, instance:testcases.CarrierLoginTest@a74868d]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@146305349</td>   <td></td> </tr>
 </table>
